--- a/.eslintrc
+++ b/.eslintrc
@@ -19,11 +19,14 @@
     "import/extensions": [".js", ".ts"]
   },
   "rules": {
-    "no-underscore-dangle": ["error", {
-      "allow": [
-        "_id"
-      ]
-    }],
+    "@typescript-eslint/no-unused-vars": "warn",
+    "no-unused-vars": "off",
+    "no-underscore-dangle": [
+      "error",
+      {
+        "allow": ["_id"]
+      }
+    ],
     "import/extensions": [
       "error",
       "ignorePackages",
