--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "author": "Voltrein",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^18.6.3",
+    "@types/validator": "^13.12.2",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
     "eslint": "^8.21.0",
@@ -26,7 +30,13 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "celebrate": "^15.0.3",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.7",
     "express": "^4.18.1",
-    "mongoose": "^6.5.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^6.5.0",
+    "validator": "^13.12.0"
   }
 }
