--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^4.17.13",
+    "@types/express-winston": "^3.0.4",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^18.6.3",
     "@types/validator": "^13.12.2",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
     "eslint": "^8.21.0",
@@ -35,8 +37,11 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.18.1",
+    "express-rate-limit": "^7.5.0",
+    "express-winston": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.5.0",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "winston": "^3.17.0"
   }
 }
