--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
     "@types/express-winston": "^3.0.4",
     "@types/jsonwebtoken": "^9.0.8",
@@ -35,10 +36,12 @@
     "bcryptjs": "^3.0.2",
     "celebrate": "^15.0.3",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.18.1",
     "express-rate-limit": "^7.5.0",
     "express-winston": "^4.2.0",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.5.0",
     "validator": "^13.12.0",
