--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.13",
     "@types/express-winston": "^3.0.4",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/mongodb": "^4.0.6",
     "@types/node": "^18.6.3",
     "@types/validator": "^13.12.2",
     "@types/winston": "^2.4.4",
@@ -43,6 +44,7 @@
     "express-winston": "^4.2.0",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.15.0",
     "mongoose": "^6.5.0",
     "validator": "^13.12.0",
     "winston": "^3.17.0"
